Preserve null arguments and wide lambda captures
Copy invocation arguments without rejecting null elements. Map captured long and double values to their JVM local-variable slots.

Signed-off-by: jcputney <jonathan@putney.io>